Thu Aug 07 23:08:08 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- fixed bug calling SQLBindParam (reported by David Fraser)

Thu Aug 07 16:21:28 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/odbc_util.c:
	- fix binding with ODBC3 DATE/TIME data
	- fix SQLExecute return if some error raised

Wed Aug  6 11:45:57 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/dbmorecmds.c use query instead of sp_help
	* include/tds.h better enumerated flags for TDS_DONE
	* src/tds/token.c better logging of tds_process_end

Wed Aug 06 14:33:30 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/odbc/connectparams.h:
	* src/odbc/odbc.c:
	- continue merge from Steve patch:
	 - merged SQLDriverConnect check and fix
	- tdoParseConnectString handle unterminated string

Wed Aug 06 11:14:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
	- continue merge from Steve patch:
	 - merged SQLGetDescRec and SQLSetDescRec

Wed Aug 06 09:53:15 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: fixed typo

Tue Aug  5 23:41:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* TODO added NTLMv2 note
	* doc/tds.html completed one little TODO
	* doc/userguide.sgml domain login discussion and tsql update
	* src/ctlib/ct.c reformatting in ct_options
	
Tue Aug 05 15:27:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: some updates

Tue Aug 05 14:22:56 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/print.c:
	- add a test for raiseerror

Tue Aug 05 10:57:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h:
	- applied Peter Daecon patch (present also in Steve Murphree one)

Tue Aug  5 01:00:29 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am removed faq and basic question
	