@@ -1,7 +1,7 @@
 TESTS		=	t0001 t0002 t0003 t0004 connect print date \
 			norowset funccall lang_error tables \
 			binary_test moreandcount earlybind \
-			putdata params
+			putdata params raiseerror
 check_PROGRAMS	=	$(TESTS)
 
 t0001_SOURCES	=	t0001.c common.c common.h
@@ -20,6 +20,7 @@ moreandcount_SOURCES	= moreandcount.c common.c common.h
 earlybind_SOURCES	= earlybind.c common.c common.h
 putdata_SOURCES	= putdata.c common.c common.h
 params_SOURCES	= params.c common.c common.h
+raiseerror_SOURCES	= raiseerror.c common.c common.h
 
 LIBS		=	-lodbc @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include -I$(ODBC_INC)
